[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "flowai"
version = "0.1.0"
description = "RL environment and training for FlowRS solver"
authors = ["Ben Weinstein <brweinstein68@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gym = ">=0.21.0"
torch = ">=1.9.0"
stable-baselines3 = ">=1.6.0"
numpy = "*"
onnx = ">=1.12.0"
onnxruntime = ">=1.10.0"